# OnyxChat

./: .env.production.example  .env.production.save  .gitignore  Cargo.toml  DOCKER-UPGRADE-README.md  README-DOCKER.md  README.md  backup-before-upgrade.sh  backup-pg-config.sh  build.gradle  container-monitoring.sh  docker-compose.prod.yml  docker-compose.yml  gradle.properties  init-db.sql  init-setup.sh  install.sh  nginx.Dockerfile  nginx.conf  production-setup.sh  restart_server.sh  run_server.sh  run_server_background.sh  server_log.sh  settings.gradle  stop_server.sh  test_direct_messages.py  test_server.sh  test_ws.py  update-docker-images.sh  upgrade-docker-safe.sh  websocket-test.html
app/: build.gradle
app/schemas/com.nekkochan.onyxchat.data.AppDatabase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/pqc/: pqc_jni.cpp
app/src/main/cpp/pqc/aes/: aes_gcm.cpp  aes_gcm.h
app/src/main/cpp/pqc/dilithium/: dilithium.cpp  dilithium.h
app/src/main/cpp/pqc/kyber/: kyber.cpp  kyber.h
app/src/main/cpp/pqc/shamir/: shamir.cpp  shamir.h
app/src/main/res/drawable/: bg_avatar_placeholder.xml  bg_bottom_sheet.xml  bg_chat_background.xml  bg_chat_header.xml  bg_chat_input.xml  bg_conversation_normal.xml  bg_conversation_pinned.xml  bg_message_composer.xml  bg_message_error.xml  bg_message_input.xml  bg_message_received.xml  bg_message_sent.xml  bg_message_system.xml  bg_pattern_dots.xml  bg_unread_count.xml  bottom_nav_text_color.xml  button_outline.xml  button_outline_warning.xml  circle_button_background.xml  circle_button_background_red.xml  circle_color_black.xml  circle_color_blue.xml  circle_color_green.xml  circle_color_purple.xml  circle_color_red.xml  circle_color_yellow.xml  default_avatar.xml  error_image.xml  ic_add_message.xml  ic_ai.xml  ic_arrow_down.xml  ic_attach.xml  ic_attachment.xml  ic_block.xml  ic_call.xml  ic_call_end.xml  ic_check.xml  ic_chevron_right.xml  ic_contacts.xml  ic_conversations.xml  (+57 more)
app/src/main/res/layout/: ### Prerequisites  activity_ai_settings.xml  activity_call.xml  activity_chat.xml  activity_chat_settings.xml  activity_document_annotation.xml  activity_document_viewer.xml  activity_forgot_password.xml  activity_legal_document.xml  activity_login.xml  activity_main.xml  activity_media_processing.xml  activity_media_viewer.xml  (+32 more)
backups/upgrade_20250405_110348/: .env.production.bak  docker-compose.yml.bak
backups/upgrade_20250405_111246/: Dockerfile.production  docker-compose.prod.yml.bak  docker-compose.yml.bak
error_pages/: 404.html  50x.html
gradle/wrapper/: gradle-wrapper.properties
nodejs-server/: .dockerignore  .env  Dockerfile  Dockerfile.development  Dockerfile.production  SUMMARY.md  docker-entrypoint.sh  package-lock.json  package.json
nodejs-server/src/: init-and-start.js  server.js  simple-server.js  websocket.js
nodejs-server/src/config/: index.js
nodejs-server/src/db/: migrate.js  seed.js
nodejs-server/src/middleware/: auth.middleware.js  rate-limiter.js
nodejs-server/src/middlewares/: fileUpload.js  index.js
nodejs-server/src/models/: contact.js  friendRequest.js  index.js  init-models.js  message.js  mock.js  oneTimePreKey.js  password-reset.model.js  refreshToken.js  session.js  user.js  userKey.js
nodejs-server/src/routes/: auth.routes.js  contacts.routes.js  crypto.routes.js  friend-requests.routes.js  media.routes.js  message.routes.js  user.routes.js
nodejs-server/src/services/: email.service.js
nodejs-server/src/utils/: auth.utils.js  error.utils.js  logger.js
old-server/: .env.example  .gitignore  Cargo.toml  README.md  SUMMARY.md
old-server/examples/: chat_client.html  server.js  ws-demo-client.html
old-server/migrations/: 20240401000001_initial_schema.sql
old-server/src/: crypto.rs  db.rs  error.rs
old-server/src/handlers/: auth.rs  message.rs
old-server/src/middleware/: auth.rs
old-server/src/models/: auth.rs  crypto.rs  message.rs
scripts/: README.md  direct-postgres-backup.sh  update-docker-images.sh  upgrade-docker-safe.sh
server/: Cargo.toml  Dockerfile  Makefile  README.md  build_log.txt  docker-compose.yml  test_server.sh
server/examples/: chat_client.html  client.js  client.py  test-client.html  ws_client.html  ws_echo.html
server/nodejs-server/src/models/: userKey.js
server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  main_echo.rs  ws.rs
server/src/handlers/: auth.rs  crypto.rs  message.rs  mod.rs  user.rs
server/src/middleware/: auth.rs
server/src/models/: auth.rs  crypto.rs  message.rs  mod.rs  user.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
team/: WORK_ASSIGNMENT
tools/: sloccount.py  sloccount_excluded.py
(+133 files in other folders)
