# Web framework
axum = { version = "0.6.20", features = ["headers", "json", "ws"] }
# Update to use typed-headers explicitly
axum-extra = { version = "0.7.2", features = ["cookie", "typed-header"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = { version = "1.33.0", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "server",
] 