[package]
name = "onyxchat-server"
version = "0.1.0"
edition = "2021"
authors = ["OnyxChat Team"]
description = "Secure messaging server with end-to-end encryption"

# Define multiple binaries
[[bin]]
name = "onyxchat-server"
path = "src/main.rs"

[[bin]]
name = "echo-server"
path = "src/bin/echo-server.rs"

[[bin]]
name = "ws-demo"
path = "src/bin/ws-demo.rs"

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["headers", "json", "ws"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = { version = "1.33.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

# Utilities
uuid = { version = "1.5.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
log = "0.4"
env_logger = "0.10"

# Authentication & security
jsonwebtoken = "8.3.0"
argon2 = "0.5.2"
rand = "0.8.5"
once_cell = "1.18.0"

# WebSockets
futures = "0.3.28"

# Validation
validator = { version = "0.16", features = ["derive"] }
