[package]
name = "onyxchat-server"
version = "0.1.0"
edition = "2021"
authors = ["OnyxChat Team"]
description = "Secure messaging server with end-to-end encryption"

# Define multiple binaries
[[bin]]
name = "onyxchat-server"
path = "src/main.rs"

[[bin]]
name = "echo-server"
path = "src/bin/echo-server.rs"

[[bin]]
name = "ws-demo"
path = "src/bin/ws-demo.rs"

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["headers", "ws"] }
axum-extra = { version = "0.7.7" }
tower-http = { version = "0.4.4", features = ["cors"] }
tokio = { version = "1.28.0", features = ["full"] }

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Configuration
dotenv = "0.15.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Authentication & security
jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"
validator = { version = "0.16.0", features = ["derive"] }
argon2 = "0.5.0"
sha2 = "0.10.7"
thiserror = "1.0.40"
rand = "0.8.5"

# WebSockets
futures = "0.3.30"

[features]
default = ["mock_db"]
mock = []
mock_db = []
